fix for comments panel overlap

--- a/assets/css/yir.css
+++ b/assets/css/yir.css
@@ -1238,7 +1238,7 @@ text-shadow: 0px 1px 2px rgba(0,0,0,.5);
     right: -444px;
     top: 120px;
     z-index: 999999;
-    background: #F8F8F8;
+    background: transparent;
     overflow: hidden;
     z-index: 20;
 	height:60%;
